--- a/index.html
+++ b/index.html
@@ -34,73 +34,20 @@
         <div class="blurb">
             Hi I'm Harvey. I like coding.
         </div>
-        <a href="#" class="icon">
-            <svg width="99.99999999999999" height="99.99999999999999" xmlns="http://www.w3.org/2000/svg"
-                 xmlns:svg="http://www.w3.org/2000/svg" class="drawing">
-                <!-- Created with SVG-edit - http://svg-edit.googlecode.com/ -->
-                <g>
-                    <title>Layer 1</title>
-                    <ellipse fill-opacity="0.33" fill="#ffffff" stroke-width="0" stroke-dasharray="null"
-                             stroke-linejoin="null" stroke-linecap="null" cx="50.33333" cy="52.66667"
-                             id="svg_1" rx="41.16667" ry="41.16667" stroke="#000000"/>
-                    <line fill="none" stroke-width="3" stroke-dasharray="null" stroke-linejoin="null"
-                          stroke-linecap="null" fill-opacity="0" x1="25.5" y1="38" x2="25.5" y2="70.67333"
-                          id="svg_7" stroke="#ffffff"/>
-                    <line fill="none" stroke="#ffffff" stroke-width="3" stroke-dasharray="null"
-                          stroke-linejoin="null" stroke-linecap="null" fill-opacity="0" x1="50.16667"
-                          y1="78" x2="54.16667" y2="78" id="svg_9"/>
-                    <line fill="none" stroke-width="3" stroke-dasharray="null" stroke-linejoin="null"
-                          stroke-linecap="null" fill-opacity="0" x1="77.16667" y1="37.66667" x2="76.83333"
-                          y2="70.33333" id="svg_10" stroke="#ffffff"/>
-                    <line fill="none" stroke="#ffffff" stroke-width="3" stroke-dasharray="null"
-                          stroke-linejoin="null" stroke-linecap="null" fill-opacity="0" x1="76.83333"
-                          y1="69" x2="53.5" y2="77.66667" id="svg_11"/>
-                    <line fill="none" stroke="#ffffff" stroke-width="3" stroke-dasharray="null"
-                          stroke-linejoin="null" stroke-linecap="null" fill-opacity="0" x1="24.83333"
-                          y1="69" x2="50.5" y2="77.66667" id="svg_12"/>
-                    <line fill="none" stroke-width="3" stroke-dasharray="null" stroke-linejoin="null"
-                          stroke-linecap="null" fill-opacity="0" x1="51.83333" y1="44.33333" x2="51.83333"
-                          y2="78.00157" id="svg_13" stroke="#ffffff"/>
-                    <path fill="none" stroke-width="3" stroke-dasharray="null" stroke-linejoin="null"
-                          stroke-linecap="null" fill-opacity="0" id="svg_15"
-                          d="m51.5,46.66666c-0.36232,-0.83333 -0.93925,-1.52392 -1.57706,-2.1c-0.6303,-0.56929 -1.10705,-1.19618 -1.75628,-1.872c-0.59006,-0.61423 -1.28179,-1.14968 -1.94735,-1.70311c-0.65188,-0.54206 -1.4705,-1.06647 -2.36425,-1.32489c-0.8987,-0.25985 -1.81083,-0.31308 -2.75362,-0.33333c-0.978,-0.02101 -2.01336,-0.27026 -2.90387,0.02845c-0.85989,0.28844 -1.59123,0.72229 -2.4509,0.9785c-0.82692,0.24644 -1.4687,0.91727 -2.36262,1.15973c-0.85197,0.23108 -1.85629,0.28267 -2.78985,0.16666c-0.87614,-0.10887 -1.66667,-0.64911 -2.53623,-1.01756l-0.82415,-0.45755l-0.73382,-0.35822"
-                          stroke="#ffffff"/>
-                    <path fill="none" stroke-width="3" stroke-dasharray="null" stroke-linejoin="null"
-                          stroke-linecap="null" fill-opacity="0"
-                          d="m51.99999,45.89203c0.37196,-0.83333 0.96429,-1.52392 1.61911,-2.1c0.64711,-0.56929 1.13658,-1.19617 1.80312,-1.872c0.60579,-0.61423 1.31597,-1.14968 1.99927,-1.70311c0.66927,-0.54205 1.50971,-1.06647 2.4273,-1.32489c0.92266,-0.25984 1.85911,-0.31307 2.82706,-0.33333c1.00407,-0.02101 2.06704,-0.27026 2.98129,0.02845c0.88283,0.28843 1.63367,0.72229 2.51628,0.97849c0.84895,0.24644 1.50786,0.91727 2.42561,1.15973c0.87469,0.23108 1.90579,0.28267 2.86424,0.16666c0.8995,-0.10887 1.71112,-0.64911 2.60387,-1.01755l0.84615,-0.45756l0.75338,-0.35822"
-                          id="svg_18" stroke="#ffffff"/>
-                    <path fill="none" stroke-width="3" stroke-dasharray="null" stroke-linejoin="null"
-                          stroke-linecap="null" fill-opacity="0"
-                          d="m51.33332,74.89203c0.36713,-0.83333 0.95177,-1.52392 1.59808,-2.1c0.63871,-0.56929 1.12181,-1.19617 1.7797,-1.872c0.59792,-0.61423 1.29888,-1.14968 1.9733,-1.70311c0.66058,-0.54205 1.4901,-1.06647 2.39578,-1.32489c0.91066,-0.25984 1.83496,-0.31307 2.79034,-0.33333c0.99105,-0.02101 2.04021,-0.27026 2.9426,0.02845c0.87135,0.28843 1.61245,0.72229 2.48359,0.97849c0.83794,0.24644 1.48827,0.91727 2.39411,1.15973c0.86333,0.23109 1.88106,0.28268 2.82704,0.16666c0.88783,-0.10887 1.68891,-0.64911 2.57005,-1.01755l0.83514,-0.45757l0.74359,-0.35822"
-                          id="svg_19" stroke="#ffffff"/>
-                    <path fill="none" stroke-width="3" stroke-dasharray="null" stroke-linejoin="null"
-                          stroke-linecap="null" fill-opacity="0"
-                          d="m51.66666,75.22536c-0.36232,-0.83333 -0.93924,-1.52392 -1.57706,-2.09999c-0.63029,-0.5693 -1.10704,-1.19617 -1.75626,-1.87201c-0.59007,-0.61423 -1.2818,-1.14967 -1.94736,-1.70311c-0.65189,-0.54205 -1.47049,-1.06647 -2.36426,-1.32489c-0.89868,-0.25983 -1.81082,-0.31306 -2.75362,-0.33333c-0.978,-0.02101 -2.01335,-0.27026 -2.90387,0.02845c-0.85989,0.28844 -1.59123,0.72229 -2.4509,0.97849c-0.82693,0.24644 -1.4687,0.91727 -2.36263,1.15973c-0.85197,0.23108 -1.85629,0.28267 -2.78985,0.16666c-0.87614,-0.10886 -1.66666,-0.64909 -2.53624,-1.01755l-0.82415,-0.45755l-0.73382,-0.35823"
-                          stroke="#ffffff" id="svg_20"/>
-                </g>
-            </svg>
+        <a href="http://fifty2project.com" class="icon">
+            <img src="img/svg/fifty2.svg" alt="The fifty2project">
         </a>
 
-        <a href="#" class="icon">
-            <svg width="100" height="100" xmlns="http://www.w3.org/2000/svg"
-                 xmlns:svg="http://www.w3.org/2000/svg" class="drawing">
-                <!-- Created with SVG-edit - http://svg-edit.googlecode.com/ -->
-                <g>
-                    <title>Layer 1</title>
-                    <ellipse fill-opacity="0.33" fill="#ffffff" stroke-width="0" stroke-dasharray="null"
-                             stroke-linejoin="null" stroke-linecap="null" cx="50.33333" cy="52.66667"
-                             id="svg_1" rx="41.16667" ry="41.16667" stroke="#000000"/>
-                    <rect fill="#000000" stroke-width="3" stroke-dasharray="null" stroke-linejoin="null"
-                          stroke-linecap="null" fill-opacity="0" x="30.16667" y="37.83333" width="41.33333"
-                          height="30.44311" id="svg_2" stroke="#fffcfc"/>
-                    <line fill="none" stroke-width="3" stroke-dasharray="null" stroke-linejoin="null"
-                          stroke-linecap="null" fill-opacity="0" x1="31.5" y1="39.16667" x2="50.5"
-                          y2="53.83333" id="svg_3" stroke="#ffffff"/>
-                    <line fill="none" stroke-width="3" stroke-dasharray="null" stroke-linejoin="null"
-                          stroke-linecap="null" fill-opacity="0" x1="70.5" y1="38.83333" x2="49.16667"
-                          y2="53.83333" id="svg_4" stroke="#ffffff"/>
-                </g>
-            </svg>
+        <a href="https://github.com/theHarvester/" class="icon">
+            <img src="img/svg/code.svg" alt="My Github">
+        </a>
+
+        <a href="http://www.weblogaboutcode.com/" class="icon">
+            <img src="img/svg/blog.svg" alt="Blog">
+        </a>
+
+        <a href="mailto:info@harvey.codes" class="icon">
+            <img src="img/svg/email.svg" alt="Contact me">
         </a>
 
     </div>
